--- a/ux/contact-me/index.html
+++ b/ux/contact-me/index.html
@@ -5,27 +5,34 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Contact me - Janus</title>
-    <link rel="stylesheet" href="../../assets/bootstrap/css/bootstrap.min.css?h=9e2f2f7964efe8968a80b0bf55661c42">
+    <link rel="stylesheet" href="../../assets/bootstrap/css/bootstrap.min.css?h=95d950105ba7ad1cd2873789123a6f35">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic">
     <link rel="stylesheet" href="../../assets/fonts/font-awesome.min.css?h=320bd0471c3e8d6b9dd55c98e185506c">
-    <link rel="stylesheet" href="../../assets/css/2-columns-media-image-video-carousel-map.css?h=a4318cd0aa8e0a7ab71867672e4c52e1">
+    <link rel="stylesheet" href="../../assets/css/2-columns-media-image-video-carousel-map.css?h=1b34ad0b0df2272776bc852641275927">
     <link rel="stylesheet" href="../../assets/css/Bold-BS4-Image-Caption-Hover-Effect-3.css?h=1c5852532269f7f368b453aa7cb1e1ac">
     <link rel="stylesheet" href="../../assets/css/Video-Responsive.css?h=6b256dd00c3de05273474840195f316a">
 </head>
 
 <body style="background: rgb(0,0,0);color: rgb(255,255,255);">
-    <nav class="navbar navbar-light navbar-expand-lg fixed-top" id="mainNav">
-        <div class="container"><a class="navbar-brand" href="/ux">JANUS</a><button data-toggle="collapse" data-target="#navbarResponsive" class="navbar-toggler" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><i class="fa fa-bars"></i></button>
+    <nav class="navbar navbar-light navbar-expand-lg fixed-top" id="mainNav" style="padding-top: 0px;">
+        <div class="container"><a class="navbar-brand" href="/" style="font-size: 25px;">JANUS</a><button data-toggle="collapse" data-target="#navbarResponsive" class="navbar-toggler" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><i class="fa fa-bars"></i></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item"><a class="nav-link" href="/ux">Home</a></li>
-                    <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" aria-expanded="false" data-toggle="dropdown" href="#">PROJECTS</a>
-                        <div class="dropdown-menu"><a class="dropdown-item" href="#">Beta Engine</a><a class="dropdown-item" href="/ux/forge-engine">Forge Engine</a><a class="dropdown-item" href="#">Others</a><a class="dropdown-item" href="/ux/trojan">Trojan</a></div>
+                    <li class="nav-item" style="font-size: 20px;"><a class="nav-link" href="/ux" style="font-size: 16px;">Home</a></li>
+                    <li class="nav-item dropdown multilevel" id="multilevel"><a class="dropdown-toggle nav-link" aria-expanded="false" data-toggle="dropdown" href="#" style="font-size: 16px;">PROJECTS</a>
+                        <div class="dropdown-menu">
+                            <div class="nav-item dropright" style="height: 32px;padding: 4px 24px;"><a class="dropdown-toggle text-dark" aria-expanded="false" data-toggle="dropdown" href="#">Engines</a>
+                                <div class="dropdown-menu" style="padding: 0px;"><a class="dropdown-item" href="/forge-engine">Forge Engine</a></div>
+                            </div>
+                            <div class="nav-item dropright" style="height: 32px;padding: 4px 24px;"><a class="dropdown-toggle text-dark" aria-expanded="false" data-toggle="dropdown" href="#">Games</a>
+                                <div class="dropdown-menu" style="padding: 0px;"><a class="dropdown-item" href="/howl">Howl: A Tale of Wolves</a><a class="dropdown-item" href="/spellthief">Spellthief</a></div>
+                            </div>
+                        </div>
                     </li>
-                    <li class="nav-item"><a class="nav-link" href="/ux/resume.pdf">RESUME</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/ux/about-me">About ME</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/ux/contact-me">CONTACT ME</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/resume.pdf" style="font-size: 16px;">RESUME</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/about-me" style="font-size: 16px;">About ME</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/contact-me" style="font-size: 16px;">CONTACT ME</a></li>
                 </ul>
             </div>
         </div>
@@ -72,6 +79,7 @@
                 <div class="col-md-10 col-lg-8 mx-auto">
                     <ul class="list-inline text-center">
                         <li class="list-inline-item"><span class="fa-stack fa-lg"><i class="fa fa-circle fa-stack-2x" style="color: rgb(33,37,41);"></i><a href="https://www.linkedin.com/in/janus-quek/"><i class="fa fa-linkedin fa-stack-1x fa-inverse"></i></a></span></li>
+                        <li class="list-inline-item"><span class="fa-stack fa-lg"><i class="fa fa-circle fa-stack-2x" style="color: rgb(33,37,41);"></i><a href="mailto:janus.quek@gmail.com"><i class="fa fa-envelope fa-stack-1x fa-inverse"></i></a></span></li>
                         <li class="list-inline-item"><span class="fa-stack fa-lg"><i class="fa fa-circle fa-stack-2x" style="color: rgb(33, 37, 41);"></i><a href="https://github.com/Viverea"><i class="fa fa-github fa-stack-1x fa-inverse"></i></a></span></li>
                     </ul>
                     <p class="text-muted copyright" style="font-family: 'Open Sans', sans-serif;">Copyright&nbsp;©&nbsp;Janus 2021</p>
@@ -83,6 +91,7 @@
     <script src="../../assets/bootstrap/js/bootstrap.min.js?h=ba42258394f86cd7822f0e850e2d60b1"></script>
     <script src="../../assets/js/2-columns-media-image-video-carousel-map.js?h=bc336573c29dd6cef9a547d30ca17cdf"></script>
     <script src="../../assets/js/clean-blog.js?h=5c5da44b414001c67a91a5784fe4f011"></script>
+    <script src="../../assets/js/multilevel-dropdown.js?h=91f15278a721f801083a3eff69c29fa9"></script>
 </body>
 
 </html>
